Compilers_Hello/Compilers_Hello/syntax.output
Terminals unused in grammar

   MY_MULTILINE_COMMENTS
   MY_SIMPLE_COMMENTS
   MY_DO
   MY_GLOBAL
   MY_STATIC
   MY_BLANK
   MY_NL
   MY_OTHER


State 156 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 $@1: %empty

    3 stmts: stmt $@1 stmts
    4      | %empty

    5 stmt: expr MY_SEMICOLON
    6     | ifstmt
    7     | whilestmt
    8     | forstmt
    9     | returnstmt
   10     | MY_BREAK MY_SEMICOLON
   11     | MY_CONTINUE MY_SEMICOLON
   12     | block
   13     | funcdef
   14     | MY_SEMICOLON

   15 expr: assignexpr
   16     | expr MY_PLUS expr
   17     | expr MY_MINUS expr
   18     | expr MY_MUL expr
   19     | expr MY_DIV expr
   20     | expr MY_MOD expr
   21     | expr MY_G expr
   22     | expr MY_GE expr
   23     | expr MY_L expr
   24     | expr MY_LE expr
   25     | expr MY_EQUAL expr
   26     | expr MY_NEQUAL expr
   27     | expr MY_AND expr
   28     | expr MY_OR expr
   29     | term

   30 term: MY_OPEN_PAR expr MY_CLOSE_PAR
   31     | MY_MINUS expr
   32     | MY_NOT expr
   33     | MY_INC lvalue

   34 $@2: %empty

   35 term: lvalue $@2 MY_INC
   36     | MY_DEC lvalue

   37 $@3: %empty

   38 term: lvalue $@3 MY_DEC
   39     | primary

   40 $@4: %empty

   41 assignexpr: lvalue $@4 MY_ASSIGN expr

   42 primary: lvalue
   43        | call
   44        | objectdef
   45        | MY_OPEN_PAR funcdef MY_CLOSE_PAR
   46        | const

   47 lvalue: MY_ID
   48       | MY_LOCAL MY_ID
   49       | MY_DOT_STREAM MY_ID
   50       | member

   51 member: lvalue MY_DOT_SIMPLE MY_ID
   52       | lvalue MY_OPEN_BRA expr MY_CLOSE_BRA
   53       | call MY_DOT_SIMPLE MY_ID
   54       | call MY_OPEN_BRA expr MY_CLOSE_BRA

   55 call: call MY_OPEN_PAR elist MY_CLOSE_PAR
   56     | lvalue callsuffix
   57     | MY_OPEN_PAR funcdef MY_CLOSE_PAR MY_OPEN_PAR elist MY_CLOSE_PAR

   58 callsuffix: normcall
   59           | methodcall

   60 normcall: MY_OPEN_PAR elist MY_CLOSE_PAR

   61 methodcall: MY_DOT_DOUBLE MY_ID MY_OPEN_PAR elist MY_CLOSE_PAR

   62 elist: expr commaexprs
   63      | %empty

   64 commaexprs: MY_COMMA expr commaexprs
   65           | %empty

   66 objectdef: MY_OPEN_BRA elist MY_CLOSE_BRA
   67          | MY_OPEN_BRA indexed MY_CLOSE_BRA

   68 indexed: indexedelem commaindex

   69 commaindex: MY_COMMA indexedelem commaindex
   70           | %empty

   71 indexedelem: MY_OPEN_ANG expr MY_DOT_UD expr MY_CLOSE_ANG

   72 $@5: %empty

   73 block: MY_OPEN_ANG $@5 stmts MY_CLOSE_ANG

   74 $@6: %empty

   75 funblock: MY_OPEN_ANG $@6 stmts MY_CLOSE_ANG

   76 $@7: %empty

   77 funcdef: MY_FUNCTION $@7 MY_OPEN_PAR idlist MY_CLOSE_PAR funblock

   78 $@8: %empty

   79 funcdef: MY_FUNCTION MY_ID $@8 MY_OPEN_PAR idlist MY_CLOSE_PAR funblock

   80 const: MY_REAL
   81      | MY_INTEGER
   82      | MY_STRING
   83      | MY_NIL
   84      | MY_TRUE
   85      | MY_FALSE

   86 $@9: %empty

   87 idlist: MY_ID $@9 idwithcommas
   88       | %empty

   89 $@10: %empty

   90 idwithcommas: MY_COMMA MY_ID $@10 idwithcommas
   91             | %empty

   92 ifstmt: MY_IF MY_OPEN_PAR expr MY_CLOSE_PAR stmt
   93       | MY_IF MY_OPEN_PAR expr MY_CLOSE_PAR stmt MY_ELSE stmt

   94 whilestmt: MY_WHILE MY_OPEN_PAR expr MY_CLOSE_PAR stmt

   95 forstmt: MY_FOR MY_OPEN_PAR elist MY_SEMICOLON expr MY_SEMICOLON elist MY_CLOSE_PAR stmt

   96 returnstmt: MY_RETURN MY_SEMICOLON
   97           | MY_RETURN expr MY_SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
MY_INTEGER (258) 81
MY_REAL (259) 80
MY_STRING (260) 82
MY_MULTILINE_COMMENTS (261)
MY_SIMPLE_COMMENTS (262)
MY_IF (263) 92 93
MY_ELSE (264) 93
MY_FOR (265) 95
MY_WHILE (266) 94
MY_DO (267)
MY_CONTINUE (268) 11
MY_BREAK (269) 10
MY_RETURN (270) 96 97
MY_AND (271) 27
MY_OR (272) 28
MY_NOT (273) 32
MY_LOCAL (274) 48
MY_GLOBAL (275)
MY_STATIC (276)
MY_NIL (277) 83
MY_TRUE (278) 84
MY_FALSE (279) 85
MY_FUNCTION (280) 77 79
MY_ID (281) 47 48 49 51 53 61 79 87 90
MY_BLANK (282)
MY_NL (283)
MY_ASSIGN (284) 41
MY_EQUAL (285) 25
MY_NEQUAL (286) 26
MY_PLUS (287) 16
MY_INC (288) 33 35
MY_MINUS (289) 17 31
MY_DEC (290) 36 38
MY_MUL (291) 18
MY_DIV (292) 19
MY_MOD (293) 20
MY_L (294) 23
MY_LE (295) 24
MY_G (296) 21
MY_GE (297) 22
MY_OPEN_ANG (298) 71 73 75
MY_OPEN_BRA (299) 52 54 66 67
MY_OPEN_PAR (300) 30 45 55 57 60 61 77 79 92 93 94 95
MY_CLOSE_ANG (301) 71 73 75
MY_CLOSE_BRA (302) 52 54 66 67
MY_CLOSE_PAR (303) 30 45 55 57 60 61 77 79 92 93 94 95
MY_DOT_UD (304) 71
MY_DOT_STREAM (305) 49
MY_DOT_SIMPLE (306) 51 53
MY_DOT_DOUBLE (307) 61
MY_COMMA (308) 64 69 90
MY_SEMICOLON (309) 5 10 11 14 95 96 97
MY_OTHER (310)
UNARY_MINUS (311)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
program (58)
    on left: 1, on right: 0
stmts (59)
    on left: 3 4, on right: 1 3 73 75
$@1 (60)
    on left: 2, on right: 3
stmt (61)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 3 92 93 94 95
expr (62)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29, on right:
    5 16 17 18 19 20 21 22 23 24 25 26 27 28 30 31 32 41 52 54 62 64
    71 92 93 94 95 97
term (63)
    on left: 30 31 32 33 35 36 38 39, on right: 29
$@2 (64)
    on left: 34, on right: 35
$@3 (65)
    on left: 37, on right: 38
assignexpr (66)
    on left: 41, on right: 15
$@4 (67)
    on left: 40, on right: 41
primary (68)
    on left: 42 43 44 45 46, on right: 39
lvalue (69)
    on left: 47 48 49 50, on right: 33 35 36 38 41 42 51 52 56
member (70)
    on left: 51 52 53 54, on right: 50
call (71)
    on left: 55 56 57, on right: 43 53 54 55
callsuffix (72)
    on left: 58 59, on right: 56
normcall (73)
    on left: 60, on right: 58
methodcall (74)
    on left: 61, on right: 59
elist (75)
    on left: 62 63, on right: 55 57 60 61 66 95
commaexprs (76)
    on left: 64 65, on right: 62 64
objectdef (77)
    on left: 66 67, on right: 44
indexed (78)
    on left: 68, on right: 67
commaindex (79)
    on left: 69 70, on right: 68 69
indexedelem (80)
    on left: 71, on right: 68 69
block (81)
    on left: 73, on right: 12
$@5 (82)
    on left: 72, on right: 73
funblock (83)
    on left: 75, on right: 77 79
$@6 (84)
    on left: 74, on right: 75
funcdef (85)
    on left: 77 79, on right: 13 45 57
$@7 (86)
    on left: 76, on right: 77
$@8 (87)
    on left: 78, on right: 79
const (88)
    on left: 80 81 82 83 84 85, on right: 46
idlist (89)
    on left: 87 88, on right: 77 79
$@9 (90)
    on left: 86, on right: 87
idwithcommas (91)
    on left: 90 91, on right: 87 90
$@10 (92)
    on left: 89, on right: 90
ifstmt (93)
    on left: 92 93, on right: 6
whilestmt (94)
    on left: 94, on right: 7
forstmt (95)
    on left: 95, on right: 8
returnstmt (96)
    on left: 96 97, on right: 9


State 0

    0 $accept: . program $end

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_IF          shift, and go to state 4
    MY_FOR         shift, and go to state 5
    MY_WHILE       shift, and go to state 6
    MY_CONTINUE    shift, and go to state 7
    MY_BREAK       shift, and go to state 8
    MY_RETURN      shift, and go to state 9
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_FUNCTION    shift, and go to state 15
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_ANG    shift, and go to state 20
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23
    MY_SEMICOLON   shift, and go to state 24

    $default  reduce using rule 4 (stmts)

    program     go to state 25
    stmts       go to state 26
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 1

   81 const: MY_INTEGER .

    $default  reduce using rule 81 (const)


State 2

   80 const: MY_REAL .

    $default  reduce using rule 80 (const)


State 3

   82 const: MY_STRING .

    $default  reduce using rule 82 (const)


State 4

   92 ifstmt: MY_IF . MY_OPEN_PAR expr MY_CLOSE_PAR stmt
   93       | MY_IF . MY_OPEN_PAR expr MY_CLOSE_PAR stmt MY_ELSE stmt

    MY_OPEN_PAR  shift, and go to state 43


State 5

   95 forstmt: MY_FOR . MY_OPEN_PAR elist MY_SEMICOLON expr MY_SEMICOLON elist MY_CLOSE_PAR stmt

    MY_OPEN_PAR  shift, and go to state 44


State 6

   94 whilestmt: MY_WHILE . MY_OPEN_PAR expr MY_CLOSE_PAR stmt

    MY_OPEN_PAR  shift, and go to state 45


State 7

   11 stmt: MY_CONTINUE . MY_SEMICOLON

    MY_SEMICOLON  shift, and go to state 46


State 8

   10 stmt: MY_BREAK . MY_SEMICOLON

    MY_SEMICOLON  shift, and go to state 47


State 9

   96 returnstmt: MY_RETURN . MY_SEMICOLON
   97           | MY_RETURN . expr MY_SEMICOLON

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23
    MY_SEMICOLON   shift, and go to state 48

    expr        go to state 49
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 10

   32 term: MY_NOT . expr

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23

    expr        go to state 50
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 11

   48 lvalue: MY_LOCAL . MY_ID

    MY_ID  shift, and go to state 51


State 12

   83 const: MY_NIL .

    $default  reduce using rule 83 (const)


State 13

   84 const: MY_TRUE .

    $default  reduce using rule 84 (const)


State 14

   85 const: MY_FALSE .

    $default  reduce using rule 85 (const)


State 15

   77 funcdef: MY_FUNCTION . $@7 MY_OPEN_PAR idlist MY_CLOSE_PAR funblock
   79        | MY_FUNCTION . MY_ID $@8 MY_OPEN_PAR idlist MY_CLOSE_PAR funblock

    MY_ID  shift, and go to state 52

    $default  reduce using rule 76 ($@7)

    $@7  go to state 53


State 16

   47 lvalue: MY_ID .

    $default  reduce using rule 47 (lvalue)


State 17

   33 term: MY_INC . lvalue

    MY_LOCAL       shift, and go to state 11
    MY_ID          shift, and go to state 16
    MY_OPEN_PAR    shift, and go to state 54
    MY_DOT_STREAM  shift, and go to state 23

    lvalue  go to state 55
    member  go to state 33
    call    go to state 56


State 18

   31 term: MY_MINUS . expr

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23

    expr        go to state 57
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 19

   36 term: MY_DEC . lvalue

    MY_LOCAL       shift, and go to state 11
    MY_ID          shift, and go to state 16
    MY_OPEN_PAR    shift, and go to state 54
    MY_DOT_STREAM  shift, and go to state 23

    lvalue  go to state 58
    member  go to state 33
    call    go to state 56


State 20

   73 block: MY_OPEN_ANG . $@5 stmts MY_CLOSE_ANG

    $default  reduce using rule 72 ($@5)

    $@5  go to state 59


State 21

   66 objectdef: MY_OPEN_BRA . elist MY_CLOSE_BRA
   67          | MY_OPEN_BRA . indexed MY_CLOSE_BRA

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_ANG    shift, and go to state 60
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23

    $default  reduce using rule 63 (elist)

    expr         go to state 61
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 62
    objectdef    go to state 35
    indexed      go to state 63
    indexedelem  go to state 64
    const        go to state 38


State 22

   30 term: MY_OPEN_PAR . expr MY_CLOSE_PAR
   45 primary: MY_OPEN_PAR . funcdef MY_CLOSE_PAR
   57 call: MY_OPEN_PAR . funcdef MY_CLOSE_PAR MY_OPEN_PAR elist MY_CLOSE_PAR

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_FUNCTION    shift, and go to state 15
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23

    expr        go to state 65
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 66
    const       go to state 38


State 23

   49 lvalue: MY_DOT_STREAM . MY_ID

    MY_ID  shift, and go to state 67


State 24

   14 stmt: MY_SEMICOLON .

    $default  reduce using rule 14 (stmt)


State 25

    0 $accept: program . $end

    $end  shift, and go to state 68


State 26

    1 program: stmts .

    $default  reduce using rule 1 (program)


State 27

    3 stmts: stmt . $@1 stmts

    $default  reduce using rule 2 ($@1)

    $@1  go to state 69


State 28

    5 stmt: expr . MY_SEMICOLON
   16 expr: expr . MY_PLUS expr
   17     | expr . MY_MINUS expr
   18     | expr . MY_MUL expr
   19     | expr . MY_DIV expr
   20     | expr . MY_MOD expr
   21     | expr . MY_G expr
   22     | expr . MY_GE expr
   23     | expr . MY_L expr
   24     | expr . MY_LE expr
   25     | expr . MY_EQUAL expr
   26     | expr . MY_NEQUAL expr
   27     | expr . MY_AND expr
   28     | expr . MY_OR expr

    MY_AND        shift, and go to state 70
    MY_OR         shift, and go to state 71
    MY_EQUAL      shift, and go to state 72
    MY_NEQUAL     shift, and go to state 73
    MY_PLUS       shift, and go to state 74
    MY_MINUS      shift, and go to state 75
    MY_MUL        shift, and go to state 76
    MY_DIV        shift, and go to state 77
    MY_MOD        shift, and go to state 78
    MY_L          shift, and go to state 79
    MY_LE         shift, and go to state 80
    MY_G          shift, and go to state 81
    MY_GE         shift, and go to state 82
    MY_SEMICOLON  shift, and go to state 83


State 29

   29 expr: term .

    $default  reduce using rule 29 (expr)


State 30

   15 expr: assignexpr .

    $default  reduce using rule 15 (expr)


State 31

   39 term: primary .

    $default  reduce using rule 39 (term)


State 32

   35 term: lvalue . $@2 MY_INC
   38     | lvalue . $@3 MY_DEC
   41 assignexpr: lvalue . $@4 MY_ASSIGN expr
   42 primary: lvalue .
   51 member: lvalue . MY_DOT_SIMPLE MY_ID
   52       | lvalue . MY_OPEN_BRA expr MY_CLOSE_BRA
   56 call: lvalue . callsuffix

    MY_OPEN_BRA    shift, and go to state 84
    MY_OPEN_PAR    shift, and go to state 85
    MY_DOT_SIMPLE  shift, and go to state 86
    MY_DOT_DOUBLE  shift, and go to state 87

    MY_ASSIGN  reduce using rule 40 ($@4)
    MY_INC     reduce using rule 34 ($@2)
    MY_DEC     reduce using rule 37 ($@3)
    $default   reduce using rule 42 (primary)

    $@2         go to state 88
    $@3         go to state 89
    $@4         go to state 90
    callsuffix  go to state 91
    normcall    go to state 92
    methodcall  go to state 93


State 33

   50 lvalue: member .

    $default  reduce using rule 50 (lvalue)


State 34

   43 primary: call .
   53 member: call . MY_DOT_SIMPLE MY_ID
   54       | call . MY_OPEN_BRA expr MY_CLOSE_BRA
   55 call: call . MY_OPEN_PAR elist MY_CLOSE_PAR

    MY_OPEN_BRA    shift, and go to state 94
    MY_OPEN_PAR    shift, and go to state 95
    MY_DOT_SIMPLE  shift, and go to state 96

    $default  reduce using rule 43 (primary)


State 35

   44 primary: objectdef .

    $default  reduce using rule 44 (primary)


State 36

   12 stmt: block .

    $default  reduce using rule 12 (stmt)


State 37

   13 stmt: funcdef .

    $default  reduce using rule 13 (stmt)


State 38

   46 primary: const .

    $default  reduce using rule 46 (primary)


State 39

    6 stmt: ifstmt .

    $default  reduce using rule 6 (stmt)


State 40

    7 stmt: whilestmt .

    $default  reduce using rule 7 (stmt)


State 41

    8 stmt: forstmt .

    $default  reduce using rule 8 (stmt)


State 42

    9 stmt: returnstmt .

    $default  reduce using rule 9 (stmt)


State 43

   92 ifstmt: MY_IF MY_OPEN_PAR . expr MY_CLOSE_PAR stmt
   93       | MY_IF MY_OPEN_PAR . expr MY_CLOSE_PAR stmt MY_ELSE stmt

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23

    expr        go to state 97
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 44

   95 forstmt: MY_FOR MY_OPEN_PAR . elist MY_SEMICOLON expr MY_SEMICOLON elist MY_CLOSE_PAR stmt

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23

    $default  reduce using rule 63 (elist)

    expr        go to state 61
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    elist       go to state 98
    objectdef   go to state 35
    const       go to state 38


State 45

   94 whilestmt: MY_WHILE MY_OPEN_PAR . expr MY_CLOSE_PAR stmt

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23

    expr        go to state 99
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 46

   11 stmt: MY_CONTINUE MY_SEMICOLON .

    $default  reduce using rule 11 (stmt)


State 47

   10 stmt: MY_BREAK MY_SEMICOLON .

    $default  reduce using rule 10 (stmt)


State 48

   96 returnstmt: MY_RETURN MY_SEMICOLON .

    $default  reduce using rule 96 (returnstmt)


State 49

   16 expr: expr . MY_PLUS expr
   17     | expr . MY_MINUS expr
   18     | expr . MY_MUL expr
   19     | expr . MY_DIV expr
   20     | expr . MY_MOD expr
   21     | expr . MY_G expr
   22     | expr . MY_GE expr
   23     | expr . MY_L expr
   24     | expr . MY_LE expr
   25     | expr . MY_EQUAL expr
   26     | expr . MY_NEQUAL expr
   27     | expr . MY_AND expr
   28     | expr . MY_OR expr
   97 returnstmt: MY_RETURN expr . MY_SEMICOLON

    MY_AND        shift, and go to state 70
    MY_OR         shift, and go to state 71
    MY_EQUAL      shift, and go to state 72
    MY_NEQUAL     shift, and go to state 73
    MY_PLUS       shift, and go to state 74
    MY_MINUS      shift, and go to state 75
    MY_MUL        shift, and go to state 76
    MY_DIV        shift, and go to state 77
    MY_MOD        shift, and go to state 78
    MY_L          shift, and go to state 79
    MY_LE         shift, and go to state 80
    MY_G          shift, and go to state 81
    MY_GE         shift, and go to state 82
    MY_SEMICOLON  shift, and go to state 100


State 50

   16 expr: expr . MY_PLUS expr
   17     | expr . MY_MINUS expr
   18     | expr . MY_MUL expr
   19     | expr . MY_DIV expr
   20     | expr . MY_MOD expr
   21     | expr . MY_G expr
   22     | expr . MY_GE expr
   23     | expr . MY_L expr
   24     | expr . MY_LE expr
   25     | expr . MY_EQUAL expr
   26     | expr . MY_NEQUAL expr
   27     | expr . MY_AND expr
   28     | expr . MY_OR expr
   32 term: MY_NOT expr .

    $default  reduce using rule 32 (term)


State 51

   48 lvalue: MY_LOCAL MY_ID .

    $default  reduce using rule 48 (lvalue)


State 52

   79 funcdef: MY_FUNCTION MY_ID . $@8 MY_OPEN_PAR idlist MY_CLOSE_PAR funblock

    $default  reduce using rule 78 ($@8)

    $@8  go to state 101


State 53

   77 funcdef: MY_FUNCTION $@7 . MY_OPEN_PAR idlist MY_CLOSE_PAR funblock

    MY_OPEN_PAR  shift, and go to state 102


State 54

   57 call: MY_OPEN_PAR . funcdef MY_CLOSE_PAR MY_OPEN_PAR elist MY_CLOSE_PAR

    MY_FUNCTION  shift, and go to state 15

    funcdef  go to state 103


State 55

   33 term: MY_INC lvalue .
   51 member: lvalue . MY_DOT_SIMPLE MY_ID
   52       | lvalue . MY_OPEN_BRA expr MY_CLOSE_BRA
   56 call: lvalue . callsuffix

    MY_OPEN_BRA    shift, and go to state 84
    MY_OPEN_PAR    shift, and go to state 85
    MY_DOT_SIMPLE  shift, and go to state 86
    MY_DOT_DOUBLE  shift, and go to state 87

    $default  reduce using rule 33 (term)

    callsuffix  go to state 91
    normcall    go to state 92
    methodcall  go to state 93


State 56

   53 member: call . MY_DOT_SIMPLE MY_ID
   54       | call . MY_OPEN_BRA expr MY_CLOSE_BRA
   55 call: call . MY_OPEN_PAR elist MY_CLOSE_PAR

    MY_OPEN_BRA    shift, and go to state 94
    MY_OPEN_PAR    shift, and go to state 95
    MY_DOT_SIMPLE  shift, and go to state 96


State 57

   16 expr: expr . MY_PLUS expr
   17     | expr . MY_MINUS expr
   18     | expr . MY_MUL expr
   19     | expr . MY_DIV expr
   20     | expr . MY_MOD expr
   21     | expr . MY_G expr
   22     | expr . MY_GE expr
   23     | expr . MY_L expr
   24     | expr . MY_LE expr
   25     | expr . MY_EQUAL expr
   26     | expr . MY_NEQUAL expr
   27     | expr . MY_AND expr
   28     | expr . MY_OR expr
   31 term: MY_MINUS expr .

    $default  reduce using rule 31 (term)


State 58

   36 term: MY_DEC lvalue .
   51 member: lvalue . MY_DOT_SIMPLE MY_ID
   52       | lvalue . MY_OPEN_BRA expr MY_CLOSE_BRA
   56 call: lvalue . callsuffix

    MY_OPEN_BRA    shift, and go to state 84
    MY_OPEN_PAR    shift, and go to state 85
    MY_DOT_SIMPLE  shift, and go to state 86
    MY_DOT_DOUBLE  shift, and go to state 87

    $default  reduce using rule 36 (term)

    callsuffix  go to state 91
    normcall    go to state 92
    methodcall  go to state 93


State 59

   73 block: MY_OPEN_ANG $@5 . stmts MY_CLOSE_ANG

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_IF          shift, and go to state 4
    MY_FOR         shift, and go to state 5
    MY_WHILE       shift, and go to state 6
    MY_CONTINUE    shift, and go to state 7
    MY_BREAK       shift, and go to state 8
    MY_RETURN      shift, and go to state 9
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_FUNCTION    shift, and go to state 15
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_ANG    shift, and go to state 20
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23
    MY_SEMICOLON   shift, and go to state 24

    $default  reduce using rule 4 (stmts)

    stmts       go to state 104
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 60

   71 indexedelem: MY_OPEN_ANG . expr MY_DOT_UD expr MY_CLOSE_ANG

    MY_INTEGER     shift, and go to state 1
    MY_REAL        shift, and go to state 2
    MY_STRING      shift, and go to state 3
    MY_NOT         shift, and go to state 10
    MY_LOCAL       shift, and go to state 11
    MY_NIL         shift, and go to state 12
    MY_TRUE        shift, and go to state 13
    MY_FALSE       shift, and go to state 14
    MY_ID          shift, and go to state 16
    MY_INC         shift, and go to state 17
    MY_MINUS       shift, and go to state 18
    MY_DEC         shift, and go to state 19
    MY_OPEN_BRA    shift, and go to state 21
    MY_OPEN_PAR    shift, and go to state 22
    MY_DOT_STREAM  shift, and go to state 23

    expr        go to state 105
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 61
